@@ -1,3 +1,13 @@
+2011-03-29  Seb Viret  <viret@in2p3.fr>
+ 
+       	* Added one new filter HLTTrackSeedMultiplicityFilter selecting events 
+	  on their number of seed candidates. Python config added.
+
+	* A small test script was added in ~/test/ directory, test_CosmicsFilters_cfg.py.  
+	  It runs directly on Raw 2011 data.
+	
+	* This modification was done based on tag V01-19-02
+
 2011-03-01  Seb Viret  <viret@in2p3.fr>
  
        	* Added one new filter HLTTrackerHaloFilter dedicated to beam halo tracks 
